# ferrous-files

./: Cargo.toml  README.md  index.html
api-types/: Cargo.toml
api-types/src/: lib.rs
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
style/: main.scss
