[package]
name = "ferrous-files-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
api-types = { path = "api-types" }
leptos = { version = "0.5.0-rc2", features = ["csr", "nightly"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
rand = "0.8.5"
instant = { version = "0.1.12", features = [ "wasm-bindgen" ] }

[workspace]
members = ["src-tauri", "api-types"]
