[package]
name = "ferrous-files-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
api-types = { path = "api-types" }
leptos = { version = "0.5.0-rc2", features = ["csr", "nightly"]}
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["tauri", "event"]}
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"

[workspace]
members = ["src-tauri", "api-types"]
