[package]
name = "api-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.185", features = ["derive"] }
chrono = { version = "0.4.28", features = ["serde"] }
humansize = "2.1.3"
